# T_3000_Workspace

./: .gitattributes  .gitignore  README.md
QyO3/: Cargo.toml  pyproject.toml
QyO3/.env/Scripts/: activate  activate.bat
QyO3/src/: lib.rs  main.py
lr/: Cargo.toml  main-plain.py  main.py  main.rs  main_plot.rs  main_timing_weird.rs  weather.py  weather_plot.py
