[package]
name = "QyO3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "QyO3"
crate-type = ["cdylib"]

[dependencies]
linreg = "0.2.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
