[package]
name = "lr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
linreg = "0.2.0"
linregress = "0.5.0"
nalgebra = "0.32.1"
regress = "0.4.1"
statrs = "0.16.0"

[[bin]]
name = "lr"
path = "main.rs"
